# TrabajoParalela

./: CMakeLists.txt  Moneda.cpp  Moneda.h  PEN_CLP.xlsx  Producto.cpp  Producto.h  README.md  main.cpp  rapidcsv.h
include/: calculateVariation.h  filterBasicBasket.h  read.h
include/libxl-4.3.0.14/doc/: conditionalFormat.html  conditionalFormatting.html  custom-format.html  formControl.html  richString.html
include/libxl-4.3.0.14/examples/fortran/: custom.f90  format.f90  generate.f90  libxl.f90
include/libxl-4.3.0.14/examples/python/tests/: test.book.py
include/libxl-4.3.0.14/include_c/: AutoFilterW.h  BookA.h  ConditionalFormatA.h  ConditionalFormattingA.h  ConditionalFormattingW.h  FilterColumnA.h  FilterColumnW.h  FontA.h  FontW.h  FormControlW.h  FormatW.h  RichStringW.h  SheetA.h  SheetW.h  handle.h
libxl-4.3.0.14/doc/: colors.html  conditionalFormat.html  conditionalFormatting.html  formControl.html  richString.html
libxl-4.3.0.14/examples/fortran/: edit.f90  extract.f90  invoice.f90  makefile
libxl-4.3.0.14/include_c/: AutoFilterA.h  BookW.h  ConditionalFormatW.h  FormControlA.h  FormatA.h  RichStringA.h  enum.h  libxl.h  setup.h
src/: calculateVariation.cpp  filterBasicBasket.cpp  main.cpp  read.cpp
